@@ -1,0 +1,9 @@
+# $NetBSD
+
+FILESOWN=	${FIRMWAREOWN}
+FILESGRP=	${FIRMWAREGRP}
+FILESMODE=	${FIRMWAREMODE}
+
+includes:
+clean:
+cleandir:
